--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-react": "^7.0.0-beta.42",
     "autoprefixer": "^8.2.0",
     "babel-loader": "^8.0.0-beta.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "bootstrap": "^4.4.1",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
@@ -33,12 +36,14 @@
     "nodemon": "^1.17.2",
     "postcss-loader": "^2.1.3",
     "react": "^16.2.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "uuidv4": "^6.0.8",
     "webpack": "^4.2.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.0.1",
